# module-dummy

./: CMakeLists.txt  Makefile.am  README  configure.ac  qore-dummy-module.spec
docs/: dummy-module-doc.html
src/: CMakeLists.txt  Makefile.am  dummy-module.cpp
test/: dummy-test.q
